# warpx_geant4

no_target/: read.ipynb
no_target/src/: action.cc  action.hh  construction.hh  generator.hh  read.cc  sim.cc
reading/: CMakeLists.txt  analyse_output.ipynb  comparison_for_report.ipynb  read.ipynb  run.mac
reading/src/: construction.cc  construction.hh  detector.hh  read.hh  run.cc  run.hh  sim.cc
